--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,10 @@ img {
     height: 70px;
 }
 
+.heart-button:hover {
+    border: 5px solid #FF3043;
+}
+
 @keyframes --like-animation {
     0% {
         transform: scale(1);
@@ -124,8 +128,8 @@ img {
     background-color: white;
 
     svg {
-        color: red;
-        fill: red;
+        color: #FF3043;
+        fill: #FF3043;
         animation-name: --like-animation;
         animation-duration: .3s;
         animation-iteration-count: 1;
