--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,10 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: 2px;
 }
 
+h2 {
+    font-size: 2em;
+}
+
 p, a {
     font-family: DMSans, serif;
     font-size: 1.5em;
@@ -191,4 +195,21 @@ a:hover {
     .arrow {
         transform: translateX(5px);
     }
+}
+
+.info-section {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    background: linear-gradient(
+        to bottom,
+        #F0FFF6 0%,
+        #F2FFF7 20%,
+        #F4FFF9 40%,
+        #F6FFFA 55%,
+        #F9FFFC 70%,
+        #FBFFFE 95%,
+        #FBFBFB 100%
+);
 }
