--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,7 @@
 
 body {
     background-color: var(--body-bg-color);
+    margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -60,6 +61,103 @@ a {
     text-decoration: none;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+hr {
+  width: 100%;
+  height: 25px;
+  background-color: var(--primary-color-dark);
+  border: 1px solid var(--primary-color-dark);
+}
+
+/* hamburger menu style */
+.hamburger-menu {
+  background-color: rgb(241, 241, 241);
+  height: 100vh;
+  width: 100%;
+  max-width: 300px;
+  position: fixed;
+  top: 0;
+  left: -300px;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  transition: 0.3s ease;
+
+  @media screen and (min-width: 1300px) {
+    display: hidden;
+  }
+}
+
+.close-btn {
+  width: 30px;
+  height: 30px;
+  font-size: 1.2rem;
+  translate: 700% 30%;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.hamburger-menu.is-open {
+  left: 0;
+}
+
+.hamburger-icon {
+  background-color: transparent;
+  border: none;
+  font-size: 2.5rem;
+  display: flex;
+  margin-top: 70%;
+  cursor: pointer;
+
+  @media screen and (min-width: 1300px) {
+    display: hidden;
+  }
+}
+
+.search-icon {
+  background-color: transparent;
+  border: none;
+  font-size: 2.5rem;
+  display: flex;
+  margin-top: 70%;
+  font-weight: 100;
+}
+
+.nav {
+  list-style: none;
+}
+
+.nav li {
+  margin-bottom: 1.8em;
+  translate: -10%;
+}
+
+.nav li:last-child {
+  margin-bottom: 0;
+}
+
+.nav li a {
+  color: black;
+}
+
+.nav li a:hover {
+  color: var(--primary-color-dark);
+  transition: opacity 0.5s ease-in-out;
+}
+
+.logo {
+  width: 100%;
+  height: auto;
+  max-width: 500px;
+}
+
+/* MAIN GEDEELTE */
 .cards-section {
     display: grid;
     grid-template-columns: 1fr;
