--- a/styles/contact.css
+++ b/styles/contact.css
@@ -214,6 +214,21 @@ main {
     background-color: var(--primary-color-lightest);
 }
 
+form {
+    p {
+        margin-bottom: .3em;
+    }
+
+    #button {
+        background-color: hsl(141deg 49.68% 35.35%);
+        border-style: none;
+        color: white;
+        width: 7em;
+        margin-top: 1em;
+        cursor: pointer;
+    }
+}
+
 footer {
   background-color: var(--primary-color-dark);
   padding-top: 1px;
