--- a/styles/contact.css
+++ b/styles/contact.css
@@ -237,6 +237,15 @@ form {
             width: 7em;
             margin-top: 1em;
             cursor: pointer;
+            transition: background-color .2s ease;
+        }
+
+        #button:hover {
+            background-color: hsl(141, 49.68%, 45%);
+        }
+
+        #button:active {
+            background-color: hsl(141, 49.68%, 30%);
         }
 
         label {
