--- a/styles/contact.css
+++ b/styles/contact.css
@@ -252,6 +252,10 @@ form {
             font-size: clamp(0.8rem, 2vw, 0.9rem);
         }
 
+        input {
+            background-color: #FBFBFB;
+        }
+
         input:focus {
             border-color: hsl(137, 20%, 45%);
             background-color: white;
